Fix overlapping glass bubbles on project pages
- Adjusted .col-6 width to calc(50% - 1em) to create horizontal spacing
- Added 1em right margin to every other column for proper separation
- Used nth-child(2n) to remove margin from rightmost columns
- Prevents glass bubbles from touching/overlapping horizontally
- Maintains responsive design while adding proper spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2654,6 +2654,16 @@ input, select, textarea {
 		margin-bottom: 0 !important;
 	}
 
+	/* Fix horizontal spacing by adjusting column widths */
+	.row .col-6 {
+		width: calc(50% - 1em) !important;
+		margin-right: 1em !important;
+	}
+
+	.row .col-6:nth-child(2n) {
+		margin-right: 0 !important;
+	}
+
 /* Header */
 
 	#header {
